update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-stainless-steel-rat_70622
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70622-h/images/cover.jpg
 creator:
   author:
     agent_name: Harrison, Harry
@@ -14,6 +17,8 @@ creator:
 description: Portions of this book appeared, in somewhat different form, in Astounding
   Science Fiction for August 1957 (#70034) and Analog Science Fact & Fiction for April
   1960 (#22541).
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70622#The-stainless-steel-rat
 gutenberg_issued: '2023-04-22'
 identifiers:
   gutenberg: '70622'
